--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">
 <title>Portfoilo</title>
 </head>
 <body>
@@ -23,30 +22,38 @@
         <section class="cards">
             <div>
                 <h2>Rainy Days e-commerce</h2>
-                <p>Description..</p>
+                <p>Rainy Days is a fictional online shop selling men's and women’s rain jackets. They are designed for a range of different outdoor activities that enriches people's lives. This project was created so I could put into practice what I've learned during the "HTML & CSS" course in the fall 2021. It features responsive layout and is WCAG compliant and accessible. In the spring of 2022 I added some JavaScript to the project.</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>JavaScript</p>
                 <img src="images/rainy_days_overview.jpg">
-                <a href="">Github repo</a>
-                <a href="">Go to Rainy Days website</a>
+                <a href="https://github.com/piiito/2021-11-14_html_and-css_ca_birgitte_vedaa">Github repo</a>
+                <a href="https://eloquent-haibt-d7b16d.netlify.app/index.html">Live demo</a>
             </div>
             <div>
                 <h2>Community Science Museum website</h2>
-                <p>Description..</p>
+                <p>The Community Science Museum is a fictional interactive museum targeted at children and familys. It is designed to both be intriguing for children and informative for adults. This project was created so display what I've learned during the fall semester 2021. It has been created with accessibility and SEO in mind, and features a responsive layout that is WCAG compliant.</p>
+                <p>HTML</p>
+                <p>CSS</p>
                 <img src="images/community_science_museum_overview.jpg">
-                <a href="">Github repo</a>
-                <a href="">Go to Community Science Museum website</a>
+                <a href="https://github.com/piiito/2021-12-19-semester_project_Birgitte_Vedaa">Github repo</a>
+                <a href="https://gracious-lovelace-208d24.netlify.app/index.html">Live demo</a>
             </div>
             <div>
                 <h2>Greeking Out blog </h2>
-                <p>Description..</p>
+                <p>Greeking Out(from Isle to Isle) is a fictional travel blog about a couple traveling around the island of Greece. . The aim of this project was to display my technical understanding and skills based on my first year of studies. It considers accessibility and SEO, has been through user testing using Hotjar. The site also fetches REST API from WordPress for some of it's content and features a responsive layout that is WCAG compliant</p>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>JavaScript</p>
                 <img src="images/greeking_out_overview.jpg">
-                <a href="">Github repo</a>
-                <a href="">Go to Greeking out website</a>
+                <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-piiito">Github repo</a>
+                <a href="https://famous-daffodil-2f1c38.netlify.app/index.html">Live demo</a>
             </div>
         </section>
 
     </main>
     <footer>
-
+        <p>Copyright ©</p>
     </footer>
 </body>
 </html>
