--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
 <title>Portfoilo</title>
 </head>
 <body>
@@ -20,6 +23,34 @@
     <main>
         <h1>Portfolio</h1>
         <section class="cards">
+            <div>
+                <h2>Art Vandelay</h2>
+                <p>Art Vandelay is a fictional bidding site. This project was created so I could put into practice what I've learned after three semesters at Noroff. It features responsive layout and is WCAG compliant and accessible.</p>
+                <p>HTML</p>
+                <p>SCSS</p>
+                <p>JavaScript</p>
+                <img src="images/artvandelay.png">
+                <a href="https://github.com/piiito/semester_project_2">Github repo</a>
+                <a href="https://remarkable-lamington-a5e822.netlify.app/">Live demo</a>
+            </div>
+            <div>
+                <h2>E-commerce store</h2>
+                <p>This project is creating a fictional e-commerce store. This project was created so I could put into practice what I've learned during the "Javascript frameworks" course. It features responsive layout and is WCAG compliant and accessible.</p>
+                <p>React</p>
+                <p>CSS</p>
+                <img src="images/e-commerce.jpg">
+                <a href="https://github.com/piiito/javascript-frameworks-ca">Github repo</a>
+                <a href="https://javascript-frameworks-ca-e-commerce.netlify.app/">Live demo</a>
+            </div>
+            <div>
+                <h2>Holidaze</h2>
+                <p>This project entails creating a website for a fictional accommodation booking company called Holidaze. It is targeted to young adults looking for new adventures.  This project was created so I could put into practice my technical understanding and skills from my two years of studying Front-End Development. It features responsive layout and is WCAG compliant and accessible.</p>
+                <p>React</p>
+                <p>Bootstrap</p>
+                <img src="images/holidaze.png">
+                <a href="https://github.com/piiito/project-exam">Github repo</a>
+                <a href="https://semester-exam-birgitte-vedaa.netlify.app/">Live demo</a>
+            </div>
             <div>
                 <h2>Rainy Days e-commerce</h2>
                 <p>Rainy Days is a fictional online shop selling men's and women’s rain jackets. They are designed for a range of different outdoor activities that enriches people's lives. This project was created so I could put into practice what I've learned during the "HTML & CSS" course in the fall 2021. It features responsive layout and is WCAG compliant and accessible. In the spring of 2022 I added some JavaScript to the project.</p>
